--- a/magnetico/campo.html
+++ b/magnetico/campo.html
@@ -1,8 +1,8 @@
-<script src="three.r57.js"></script>
-<script src="three.TrackballControls.js"></script>
-<script src="stats.min.js"></script>
-<script src="Detector.js"></script>
-<script src="jquery-1.9.1.js"></script>
+<script src="../lib/three.r70.min.js"></script>
+<script src="../lib/TrackballControls.js"></script>
+<script src="../lib/stats.min.js"></script>
+<script src="../lib/Detector.js"></script>
+<script src="../lib/jquery-2.1.3.min.js"></script>
 
 <style>
   body {
