--- a/electric-field/electric-field.html
+++ b/electric-field/electric-field.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+
 <script src="../lib/three.r70.min.js"></script>
 <script src="../lib/TrackballControls.js"></script>
 
